Fixed services category img and description
